# Paper-Cleaner

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  NOTICE  README.md  run.sh
FactReview/: .env.example  .gitattributes  .gitignore  CHANGES.md  README.md  pyproject.toml
FactReview/RefCopilot/: README.md  pyproject.toml
FactReview/RefCopilot/src/refcopilot/: __init__.py  bibtex_suggest.py  cli.py  factreview.py  merge.py  models.py  pipeline.py  report.py
FactReview/RefCopilot/src/refcopilot/cache/: __init__.py  disk_cache.py
FactReview/RefCopilot/src/refcopilot/extract/: __init__.py  llm_extractor.py
FactReview/RefCopilot/src/refcopilot/llm/: __init__.py  client.py
FactReview/RefCopilot/src/refcopilot/ratelimit/: __init__.py  arxiv.py  crossref.py  openalex.py  openreview.py  semantic_scholar.py
FactReview/RefCopilot/src/refcopilot/search/: __init__.py  arxiv.py  base.py  crossref.py  openalex.py  openreview.py  semantic_scholar.py
FactReview/RefCopilot/src/refcopilot/verify/: __init__.py  completeness.py  hallucination.py  llm_verifier.py  non_academic.py  outdated.py  retraction.py  text_match.py  thresholds.py
FactReview/RefCopilot/tests/: conftest.py  test_e2e_pipeline.py  test_inputs.py  test_retrieval.py  test_schemas.py  test_verify.py
FactReview/demos/: README.md
FactReview/demos/Graph/compgcn/: report.md
FactReview/demos/Graph/compgcn/execution/: checks.json  tasks.yaml
FactReview/demos/Graph/compgcn/execution/repo/: codeeval_eval_ckpt.py  helper.py  requirements.txt  run.py
FactReview/demos/Graph/compgcn/execution/repo/deployment/: Dockerfile  install_deps.py
FactReview/scripts/: execute_review_pipeline.py  execute_review_runtime_job.py  execute_stage_claim_extract.py  execute_stage_execution.py  execute_stage_parse.py  execute_stage_positioning.py  execute_stage_refcheck.py  execute_stage_report.py  execute_stage_teaser.py
FactReview/src/: pipeline_full.py
FactReview/src/agent_runtime/: agent_prompt.py  agent_tools.py  runner.py
FactReview/src/common/: __init__.py  config.py  env.py  pipeline_context.py  state.py  storage.py  types.py
FactReview/src/fact_generation/execution/: __init__.py  graph.py  stage_runner.py
FactReview/src/fact_generation/execution/nodes/: __init__.py  finalize.py  fix.py  judge.py  plan.py  prepare.py  run.py
FactReview/src/fact_generation/execution/tools/: __init__.py  alignment.py  baseline_checks.py  docker.py  metrics.py  paper_tables.py  results_tables.py  task_infer.py
FactReview/src/fact_generation/positioning/: __init__.py  bibtex.py  paper_search.py  semantic_scholar.py  stage_runner.py
FactReview/src/fact_generation/refcheck/: __init__.py  refcheck.py  stage_runner.py
FactReview/src/llm/: __init__.py  client.py  codex_auth.py  codex_client.py  provider_capabilities.py
FactReview/src/llm/providers/: __init__.py  codex_instructions.txt
FactReview/src/preprocessing/claim_extract/: __init__.py  decomposer.py  extract_claims.txt  extractor.py  heuristics.py  results_parser.py  stage_runner.py
FactReview/src/preprocessing/parse/: __init__.py  markdown_parser.py  mineru.py  mineru_adapter.py  stage_runner.py
FactReview/src/review/report/: claim_audit.py  final_report.py  final_report_audit.py  pdf_export.py  pdf_renderer.py  source_annotations.py  stage_runner.py
FactReview/src/review/teaser/: stage_runner.py  teaser.py
FactReview/src/schemas/: __init__.py  claim.py  config.py  execution.py  paper.py  positioning.py  review.py  stage.py
FactReview/src/util/: __init__.py  cutoff_date.py  fs.py  meta.py  paper_input.py  recorder.py  run_layout.py  subprocess_runner.py  verbose.py
FactReview/tests/: conftest.py  test_e2e_pipeline.py  test_schemas.py
FactReview/tests/stages/: test_claim_extract.py  test_execution.py  test_positioning.py  test_refcheck.py  test_report.py  test_teaser.py
scripts/: apply-refcheck.py  revendor.sh  sync-upstream.sh
